começo do processamento de reparaçao